# ZeroGuard

./: README.md  ZEROGUARD_DETAILED_TECHNICAL_REPORT.md
ETAI/backend/: requirements.txt
ETAI/data/: citation_verification_report.md  cmapss_sample.json  factory_act.json  oisd_standards.json  plant_layout.json  scenarios_500.json
ETAI/docs/: architecture.md
ETAI/frontend/: index.html
ETAI/graph-engine/: README.md  pyproject.toml
ETAI/graph-engine/graph_engine/: schema.py
final/: MERGE_AUDIT.md  MERGE_PLAN.md  README.md
final/backend/: adversarial_re_audit.py  audit_post_merge_cleanliness.py  generate_enterprise_verification_screenshots.py  generate_exact_visual_system_screenshots.py  generate_fresh_20_scenarios.py  generate_master_ui_verification_screenshots.py  generate_ranked_additions_screenshots.py  generate_tabbed_ui_screenshots.py  generate_verification_screenshots.py  generate_winning_features_screenshots.py  requirements.txt  strict_inspection_audit.py  test_all_35_warning_scenarios.py  test_frontend_api_grep.py  test_live_api_endpoints.py  (+2 more)
hardware/: FINAL_PRE_MERGE_REPORT.md  FIX_VERIFICATION_TABLE.md  PRODUCTION_AUDIT_REPORT.md  alert_system.py  analyze_all_compound_critical.py  analyze_warning_watch.py  check_safe_h2s.py  check_schema_conformance.py  find_compound_critical.py  graph_engine.py  parameter_fitting.py  requirements.txt  rule_guard.py  schemas.py  test_alert_system.py  test_critical_guarantees.py  test_dangling_node_fix.py  test_hot_work_h2s_real.py  test_rule_guard_integration.py  test_schema_conformance.py  time_bucketing.py
(+145 files in other folders)
