[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-engine"
version = "0.1.0"
description = "ZeroGuard Compound Industrial Risk Intelligence Graph Engine Interface & Stub"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
]
